# cellular-automata

./: BinaryGridCanvas.cpp  BinaryGridCanvas.hpp  CMakeLists  CMakeLists.txt  CellularAutomataAlgorithm.cpp  CellularAutomataAlgorithm.hpp  CellularAutomataDriver.cpp  CellularAutomataGrid.cpp  CellularAutomataGrid.hpp  Makefile  TestCellularAutomata.cpp
cmake_modules/: FindSFML.cmake
